# rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
integration-tests/: test_agent.py  test_clone_and_index.py
integration-tests/a2a_tests/: test_a2a_rag_agent.py
src/rag_agent/: __init__.py  agent.py  git.py  markdown_splitter.py  vector_store.py
src/rag_agent/a2a/: agent_executor.py  server.py
tests/: test_git.py  test_markdown_splitter.py
tests/data/level1/: intro.md
tests/data/level1/level2/: setup.md  usage.md
tests/data/level1/level2/level3/: reference.md
vs-code-extension/codenanny/: .gitignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vs-code-extension/codenanny/src/: extension.ts
