[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Reuhl", email = "thomas.reuhl@telekom.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rag-agent = "rag_agent:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
addopts = "--tb=short"  # Short for not leaking possible secrets in the traceback
