[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Reuhl", email = "tom1299@jeeatwork.com" }
]
requires-python = ">=3.12"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk>=1.1.0",
    "langchain-agent>=0.1.1",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "s2a-sdk>=1.0.4",
    "sse-starlette>=3.4.5",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
rag-agent = "rag_agent:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
addopts = "--tb=short"  # Short for not leaking possible secrets in the traceback
testpaths = ["tests", "integration-tests"]
